added research page for tools

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
-  "extends": "astro/tsconfigs/base",
+
   "compilerOptions": {
-    "strictNullChecks": true
+    "lib":["esnext", "dom"],
+    "strictNullChecks": true,
+
   }
+  
 }
